Intermediate work on the driver

--- a/docs/examples/driver_examples/Qcodes_example_with_Keysight_PNA_N5222B.ipynb
+++ b/docs/examples/driver_examples/Qcodes_example_with_Keysight_PNA_N5222B.ipynb
@@ -340,6 +340,182 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pna.write('MMEM:STOR:TRAC:FORM:SNP RI')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"1, 2, 3, 4\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "portList = [1, 2, 3, 4]\n",
+    "ports_string = \"\\\"\" + str(str(portList)[1:len(str(portList)) - 1]) + \"\\\"\"\n",
+    "print(ports_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CALC1:DATA:SNP:PORT? \"1, 2, 3, 4\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "write = 'CALC1' + ':DATA:SNP:PORT? ' + str(ports_string)\n",
+    "print(write)\n",
+    "data = pna.visa_handle.query_binary_values(write)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np \n",
+    "data = np.array(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(33033,)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "portCount = len(portList)\n",
+    "snpCount = (pow(portCount, 2) * 2) + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "snpCount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = np.array(data, dtype=float).reshape(snpCount, -1).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1001, 33)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = np.empty([data.shape[0], (data.shape[1] - 1) // 2])\n",
+    "        \n",
+    "f = data[:, 0]\n",
+    "for i in range(1, (data.shape[1] - 1), 2):  # counts in 2s. Aka 1,3,5,7,9 etc up to data limit-1\n",
+    "    if i == 1:\n",
+    "        s = data[:, i] + 1j * data[:, i + 1]\n",
+    "    else:\n",
+    "        t = data[:, i] + 1j * data[:, i + 1]\n",
+    "        s = np.c_[s, t]\n",
+    "\n",
+    "\n",
+    "s = s.reshape(-1, portCount, portCount)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1001, 4, 4)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
