--- a/docs/examples/Guide to the parameter node.ipynb
+++ b/docs/examples/Guide to the parameter node.ipynb
@@ -68,7 +68,7 @@
     {
      "data": {
       "text/plain": [
-       "{'p': <qcodes.instrument.parameter.Parameter: p at 450862832>}"
+       "{'p': <qcodes.instrument.parameter.Parameter: p at 60981088>}"
       ]
      },
      "execution_count": 2,
@@ -206,12 +206,12 @@
        " 'submodules': {},\n",
        " '__class__': 'qcodes.instrument.parameter_node.ParameterNode',\n",
        " 'parameters': {'p': {'value': 1,\n",
-       "   'ts': '2018-08-29 14:43:42',\n",
+       "   'ts': '2018-08-30 10:03:43',\n",
        "   'raw_value': 1,\n",
        "   '__class__': 'qcodes.instrument.parameter.Parameter',\n",
+       "   'label': 'P',\n",
        "   'full_name': 'node_p',\n",
-       "   'name': 'p',\n",
-       "   'label': 'P'}},\n",
+       "   'name': 'p'}},\n",
        " 'parameter_nodes': {'subnode': {'functions': {},\n",
        "   'submodules': {},\n",
        "   '__class__': 'qcodes.instrument.parameter_node.ParameterNode',\n",
@@ -219,9 +219,9 @@
        "     'ts': None,\n",
        "     'raw_value': None,\n",
        "     '__class__': 'qcodes.instrument.parameter.Parameter',\n",
+       "     'label': 'P',\n",
        "     'full_name': 'node_subnode_p',\n",
-       "     'name': 'p',\n",
-       "     'label': 'P'}},\n",
+       "     'name': 'p'}},\n",
        "   'parameter_nodes': {},\n",
        "   'name': 'subnode'}},\n",
        " 'name': 'node'}"
@@ -281,6 +281,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We can also print a snapshot of all parameters and parameter nodes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "node :\n",
+      "\tparameter value\n",
+      "--------------------------------------------------------------------------------\n",
+      "p :\t1 \n",
+      "\n",
+      "node_subnode :\n",
+      "\tparameter value\n",
+      "--------------------------------------------------------------------------------\n",
+      "p :\tNone \n"
+     ]
+    }
+   ],
+   "source": [
+    "node.print_snapshot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Accessing Parameters as attributes"
    ]
   },
@@ -303,7 +335,7 @@
        "42"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +365,7 @@
        "1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +399,7 @@
        "42"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,22 +429,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<qcodes.instrument.parameter.Parameter: p at 451257232>\n"
+      "<qcodes.instrument.parameter.Parameter: p at 451256728>\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "{'value': 42,\n",
-       " 'ts': '2018-08-29 14:43:42',\n",
+       " 'ts': '2018-08-30 10:03:43',\n",
        " 'raw_value': 42,\n",
        " '__class__': 'qcodes.instrument.parameter.Parameter',\n",
+       " 'label': 'P',\n",
        " 'full_name': 'p',\n",
-       " 'name': 'p',\n",
-       " 'label': 'P'}"
+       " 'name': 'p'}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,6 +490,14 @@
     "\n",
     "for k in range(5):\n",
     "    print(node.p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As a general rule, all Instruments should have `use_as_attributes=False` to ensure that we don't accidentally perform actions on instruments that may negatively impact the experiment.  \n",
+    "For more abstract ParameterNodes, especially ones where parameters don't perform ancillary get/set functions, using `use_as_attributes=True` is preferred."
    ]
   }
  ],
