add method to extract snp data directly from the instrument

--- a/docs/examples/driver_examples/Qcodes_example_with_Keysight_PNA_N5222B.ipynb
+++ b/docs/examples/driver_examples/Qcodes_example_with_Keysight_PNA_N5222B.ipynb
@@ -382,17 +382,7 @@
    "source": [
     "write = 'CALC1' + ':DATA:SNP:PORT? ' + str(ports_string)\n",
     "print(write)\n",
-    "data = pna.visa_handle.query_binary_values(write)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np \n",
-    "data = np.array(data)"
+    "data = np.array(pna.visa_handle.query_binary_values(write))"
    ]
   },
   {
