revert old example notebook

--- a/docs/examples/driver_examples/Qcodes_example_with_Keysight_PNA_N5222B.ipynb
+++ b/docs/examples/driver_examples/Qcodes_example_with_Keysight_PNA_N5222B.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Example Notebook for Keysight Network Analyzers\n",
     "\n",
-    "This notebook is indendet to give an overview over the functions implemented in the QCoDeS driver for the Keysight network analyzers. The driver is implemented to be generic as possible, with individual instrument drivers filling in only the hardware limits of the instrument, so although this example uses the N5245A, the concepts and code should work for any keysight network analyzer."
+    "This notebook is indendet to give an overview over the functions implemented in the QCoDeS driver for the Keysight network analyzers. The driver is implemented to be generic as possible, with individual instrument drivers filling in only the hardware limits of the instrument, so although this example uses the N5222B, the concepts and code should work for any keysight network analyzer."
    ]
   },
   {
@@ -70,9 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Connect to the instrument\n",
-    "\n",
-    "You will have to insert the correct VISA address for your PNA below. On my PC, the PNA has IP address `192.168.0.10`. You can generally use NI MAX or Agilent IO Toolkit to figure out what the VISA address of your instrument is, particularly for USB or GPIB connections."
+    "## Connect to the instrument\n"
    ]
   },
   {
@@ -321,7 +319,6 @@
     "pna.start(fstart)\n",
     "pna.stop(fstop)\n",
     "pna.points(points)\n",
-    "pna.trigger_source(\"IMM\")\n",
     "\n",
     "# Enable 2 averages, and set IF BW to 1kHz\n",
     "pna.if_bandwidth(1e3)\n",
