removed unneeded sections in the example and added more comments

--- a/docs/examples/driver_examples/Qcodes_example_with_Keysight_PNA_N5222B.ipynb
+++ b/docs/examples/driver_examples/Qcodes_example_with_Keysight_PNA_N5222B.ipynb
@@ -91,26 +91,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pna.delete_all_traces()\n",
-    "\n",
-    "window = pna.add_window()\n",
-    "channel = pna.add_channel()\n",
-    "\n",
-    "trace_s21 = channel.add_trace(\"S21\")  # We need a trace in the rest of the notebook so lets add one again \n",
-    "trace_s11 = channel.add_trace(\"S11\")\n",
-    "trace_s43 = channel.add_trace(\"S43\")\n",
-    "\n",
-    "window.add_trace(trace_s21)\n",
-    "# Or \n",
-    "#window.add_channel(channel) # add all traces in the channel"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -178,14 +158,16 @@
    "source": [
     "pna.delete_all_traces()\n",
     "\n",
+    "# Note: adding a window is strictly speaking not necessary for a measurement, but often experimantalists \n",
+    "# want to see what is going on by lookin at the instrument display\n",
     "window = pna.add_window()\n",
     "channel = pna.add_channel()\n",
     "\n",
-    "trace_s21 = channel.add_trace(\"S21\")  # We need a trace in the rest of the notebook so lets add one again \n",
+    "trace_s21 = channel.add_trace(\"S21\")  \n",
     "trace_s11 = channel.add_trace(\"S11\")\n",
     "trace_s43 = channel.add_trace(\"S43\")\n",
     "\n",
-    "window.add_channel(channel)\n",
+    "window.add_channel(channel) # This will add all traces in the channel to the window\n",
     "\n",
     "# Run a measurement\n",
     "fstart = 10e6  # Hz\n",
@@ -528,53 +510,6 @@
    ],
    "source": [
     "channel.trace"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Windows "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\"2\"'"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pna.ask(\"DISP:CATalog?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "24"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "576//24"
    ]
   },
   {
