--- a/docs/examples/driver_examples/Qcodes_example_with_Keysight_Network_Analyzer.ipynb
+++ b/docs/examples/driver_examples/Qcodes_example_with_Keysight_Network_Analyzer.ipynb
@@ -272,6 +272,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\"1,2,3,4\"'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pna.ask(\"SYST:MEAS:CAT?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
