work in progress

--- a/docs/examples/driver_examples/Qcodes_example_with_Keysight_Network_Analyzer.ipynb
+++ b/docs/examples/driver_examples/Qcodes_example_with_Keysight_Network_Analyzer.ipynb
@@ -78,7 +78,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Connected to: Keysight Technologies N5222B (serial:MY57041028, firmware:A.13.25.04) in 0.56s\n"
+      "Connected to: Keysight Technologies N5222B (serial:MY57041028, firmware:A.13.25.04) in 0.83s\n"
      ]
     }
    ],
@@ -249,13 +249,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Command CALC3:MEAS1:DEF 'S11' produced error +3003,\"The specified measurement number is already in use.\"\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "<N52xxChannel: pna_channel3 of N5222B: pna>"
@@ -272,36 +265,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\"1,2,3,4\"'"
+       "ChannelList(<N5222B: pna>, N52xxChannel, [<N52xxChannel: pna_channel1 of N5222B: pna>, <N52xxChannel: pna_channel2 of N5222B: pna>, <N52xxChannel: pna_channel3 of N5222B: pna>])"
       ]
      },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pna.ask(\"SYST:MEAS:CAT?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ChannelList(<N5222B: pna>, N52xxChannel, [<N52xxChannel: pna_channel1 of N5222B: pna>])"
-      ]
-     },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,62 +362,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ChannelList(<N5222B: pna>, N52xxMeasurement, [<N52xxMeasurement: pna_measurement1 of N5222B: pna>, <N52xxMeasurement: pna_measurement1 of N5222B: pna>, <N52xxMeasurement: pna_measurement2 of N5222B: pna>])"
+       "ChannelList(<N52xxChannel: pna_channel1 of N5222B: pna>, N52xxMeasurement, [<N52xxMeasurement: pna_channel1_measurement1 of N52xxChannel: pna_channel1>, <N52xxMeasurement: pna_channel1_measurement4 of N52xxChannel: pna_channel1>])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pna.measurements"
+    "pna.channels[0].measurements"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<N52xxMeasurement: pna_measurement4 of N5222B: pna>"
+       "ChannelList(<N52xxChannel: pna_channel2 of N5222B: pna>, N52xxMeasurement, [<N52xxMeasurement: pna_channel2_measurement2 of N52xxChannel: pna_channel2>, <N52xxMeasurement: pna_channel2_measurement3 of N52xxChannel: pna_channel2>])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pna.measurements.add(channel=1, meas_type=\"S11\")"
+    "pna.channels[1].measurements"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Command CALC2:MEAS1:DEF 'S11' produced error +3003,\"The specified measurement number is already in use.\"\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "ChannelList(<N5222B: pna>, N52xxMeasurement, [<N52xxMeasurement: pna_measurement1 of N5222B: pna>, <N52xxMeasurement: pna_measurement1 of N5222B: pna>, <N52xxMeasurement: pna_measurement2 of N5222B: pna>, <N52xxMeasurement: pna_measurement4 of N5222B: pna>])"
+       "<N52xxMeasurement: pna_channel2_measurement1 of N52xxChannel: pna_channel2>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pna.measurements"
+    "pna.channels[1].measurements.add(meas_type=\"S11\")"
    ]
   },
   {
