work in progress

--- a/docs/examples/driver_examples/Qcodes_example_with_Keysight_Network_Analyzer.ipynb
+++ b/docs/examples/driver_examples/Qcodes_example_with_Keysight_Network_Analyzer.ipynb
@@ -78,7 +78,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Connected to: Keysight Technologies N5222B (serial:MY57041028, firmware:A.13.25.04) in 0.83s\n"
+      "Connected to: Keysight Technologies N5222B (serial:MY57041028, firmware:A.13.25.04) in 0.47s\n"
      ]
     }
    ],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "ChannelList(<N5222B: pna>, N52xxWindow, [])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,16 +124,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<N52xxWindow: pna_window1 of N5222B: pna>"
+       "<N52xxWindow: pna_window2 of N5222B: pna>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,16 +144,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ChannelList(<N5222B: pna>, N52xxWindow, [<N52xxWindow: pna_window1 of N5222B: pna>])"
+       "ChannelList(<N5222B: pna>, N52xxWindow, [<N52xxWindow: pna_window2 of N5222B: pna>])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "ChannelList(<N5222B: pna>, N52xxWindow, [])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -294,16 +294,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ChannelList(<N52xxChannel: pna_channel1 of N5222B: pna>, N52xxTrace, [])"
+       "ChannelList(<N52xxChannel: pna_channel1 of N5222B: pna>, N52xxTrace, [<N52xxTrace: pna_channel1_CH1_S11_1 of N52xxChannel: pna_channel1>])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,43 +314,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<N52xxTrace: pna_channel2_S23 of N52xxChannel: pna_channel2>"
+       "<N52xxTrace: pna_channel2_S44 of N52xxChannel: pna_channel2>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pna.channels.add()\n",
-    "pna.channels[1].traces.add(trace_type=\"S23\")"
+    "pna.channels[1].traces.add(trace_type=\"S44\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ChannelList(<N52xxChannel: pna_channel2 of N5222B: pna>, N52xxTrace, [<N52xxTrace: pna_channel2_S23 of N52xxChannel: pna_channel2>])"
+       "ChannelList(<N52xxChannel: pna_channel2 of N5222B: pna>, N52xxTrace, [<N52xxTrace: pna_channel2_CH2_S11_2 of N52xxChannel: pna_channel2>, <N52xxTrace: pna_channel2_S33 of N52xxChannel: pna_channel2>, <N52xxTrace: pna_channel2_S44 of N52xxChannel: pna_channel2>])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pna.channels[1].traces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ChannelList(<N52xxChannel: pna_channel1 of N5222B: pna>, N52xxTrace, [<N52xxTrace: pna_channel1_CH1_S11_1 of N52xxChannel: pna_channel1>])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pna.channels[0].traces"
    ]
   },
   {
@@ -362,16 +382,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ChannelList(<N52xxChannel: pna_channel1 of N5222B: pna>, N52xxMeasurement, [<N52xxMeasurement: pna_channel1_measurement1 of N52xxChannel: pna_channel1>, <N52xxMeasurement: pna_channel1_measurement4 of N52xxChannel: pna_channel1>])"
+       "ChannelList(<N52xxChannel: pna_channel1 of N5222B: pna>, N52xxMeasurement, [<N52xxMeasurement: pna_channel1_measurement1 of N52xxChannel: pna_channel1>])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +411,7 @@
        "ChannelList(<N52xxChannel: pna_channel2 of N5222B: pna>, N52xxMeasurement, [<N52xxMeasurement: pna_channel2_measurement2 of N52xxChannel: pna_channel2>, <N52xxMeasurement: pna_channel2_measurement3 of N52xxChannel: pna_channel2>])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,23 +422,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Command CALC2:MEAS1:DEF 'S11' produced error +3003,\"The specified measurement number is already in use.\"\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<N52xxMeasurement: pna_channel2_measurement1 of N52xxChannel: pna_channel2>"
+       "<N52xxMeasurement: pna_channel2_measurement10 of N52xxChannel: pna_channel2>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +442,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ChannelList(<N52xxChannel: pna_channel2 of N5222B: pna>, N52xxMeasurement, [<N52xxMeasurement: pna_channel2_measurement2 of N52xxChannel: pna_channel2>, <N52xxMeasurement: pna_channel2_measurement3 of N52xxChannel: pna_channel2>, <N52xxMeasurement: pna_channel2_measurement10 of N52xxChannel: pna_channel2>])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pna.channels[1].measurements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
