--- a/docs/examples/driver_examples/Qcodes example with Yokogawa GS2xx.ipynb
+++ b/docs/examples/driver_examples/Qcodes example with Yokogawa GS2xx.ipynb
@@ -11,15 +11,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pyqtgraph plotting not supported, try \"from qcodes.plots.pyqtgraph import QtPlot\" to see the full error\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import time \n",
@@ -37,7 +29,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Connected to: YOKOGAWA GS210 (serial:91T928108, firmware:2.02) in 0.08s\n"
+      "Connected to: YOKOGAWA GS210 (serial:91TA27843, firmware:2.02) in 0.62s\n"
      ]
     }
    ],
@@ -560,7 +552,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
